--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,18 @@
+device-tree-compiler (1.3.0-2) unstable; urgency=low
+
+  * Add libfdt package (Closes: #477565)
+    - Thanks Dmitry Eremin-Solenikov and Aurelien Jarno for patch.
+  * Backport upstream fixes as patches until 2012-1-21.
+  * Reword package description to generalize architecture support.
+    - Removes OpenFirmware and PowerPC references.
+  * Update dtc manpage and include fdtget, fdtput, fdtdump, convert-dtsv0,
+    dtdiff manpages.
+  * d/rules: Add build-arch and build-indep targets.
+  * d/README.source: refer to quilt patching system.
+  * Remove Apps top-level section from doc-base.
+
+ -- Hector Oron <zumbi@debian.org>  Sat, 28 Jan 2012 01:16:09 +0100
+
 device-tree-compiler (1.3.0-1) unstable; urgency=low
 
   * New upstream release. (Closes: #572945)
