--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+device-tree-compiler (1.3.0-3) unstable; urgency=low
+
+  * libfdt-dev: Missing header file prevents the library usage
+    Thanks Domenico Andreoli (Closes: #706137)
+
+ -- Hector Oron <zumbi@debian.org>  Sat, 27 Apr 2013 07:47:09 +0000
+
 device-tree-compiler (1.3.0-2) unstable; urgency=low
 
   * Add libfdt package (Closes: #477565)
