--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+device-tree-compiler (1.3.0-4) unstable; urgency=low
+
+  * Revert accidental source format change.
+
+ -- Hector Oron <zumbi@pergolesi.debian.org>  Sat, 27 Apr 2013 09:59:06 +0000
+
 device-tree-compiler (1.3.0-3) unstable; urgency=low
 
   * libfdt-dev: Missing header file prevents the library usage
